--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,25 @@
+// Font
+$mulish: 'Mulish Variable', sans-serif;
+$playfair-display: 'Playfair Display Variable', sans-serif;
+
+// Classi Generiche
+.txt-playfair-display {
+    font-family: $playfair-display;
+    font-weight: 900;
+}
+
+h1{
+    font-size: 80px;
+    font-weight: 300;
+}
+
+@mixin button($border-color, $bg-color){
+    font-size: 13px;
+    padding: 15px 40px;
+    border: 3px solid $border-color;
+    background-color: $bg-color;
+}
+
 @mixin flex($direction, $justify-content, $align-items){
     display: flex;
     flex-direction: $direction;
