Rimozione site structor

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,7 +10,25 @@ $playfair-display: 'Playfair Display Variable', sans-serif;
 
 h1{
     font-size: 80px;
+}
+
+h2{
+    font-size: 60px;
+    text-align: center;
+    padding: 120px 0 90px 0;
+}
+
+h1,
+h2,
+h3{
     font-weight: 300;
+}
+
+
+// row
+.wrapper {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 @mixin button($border-color, $bg-color){
