Modifica logica cards

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -45,7 +45,8 @@ h3{
     align-items: $align-items;
 }
 
-@mixin square($space){
+@mixin rounded($space){
     width: $space;
     height: $space;
+    border-radius: 50%;
 }
