--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,5 @@
+@use './colors' as *;
+
 // Font
 $mulish: 'Mulish Variable', sans-serif;
 $playfair-display: 'Playfair Display Variable', sans-serif;
@@ -5,27 +7,32 @@ $playfair-display: 'Playfair Display Variable', sans-serif;
 // Classi Generiche
 .txt-playfair-display {
     font-family: $playfair-display;
-    font-weight: 900;
+    &.bold{
+        font-weight: 900
+
+    }
 }
 
-h1{
-    font-size: 80px;
+.text-uppercase{
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: $black;
+    font-weight: 700;
+    font-size: var(--font-size-xs);
 }
 
-h2{
-    font-size: 60px;
-    text-align: center;
-    padding: 120px 0 90px 0;
+body {
+    font-family: $mulish;
+    color: $txt-dove-grey;
+    font-weight: 200;
 }
 
-h1,
-h2,
-h3{
+h1,h2,h3,h4,h5,h6{
     font-weight: 300;
+    color: $black;
 }
 
 
-// row
 .wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -33,7 +40,7 @@ h3{
 
 @mixin button($border-color, $bg-color){
     font-size: 13px;
-    padding: 15px 40px;
+    padding: 17px 50px;
     border: 3px solid $border-color;
     background-color: $bg-color;
 }
