--- a/src/libreriaRB.css
+++ b/src/libreriaRB.css
@@ -27,13 +27,13 @@ body {
 :root {
     --font-size-xxxs: calc(0.3rem + 0.2vw);
     --font-size-xxs: calc(0.5rem + 0.2vw);
-    --font-size-xs: calc(0.7rem + 0.2vw);
-    --font-size-s: calc(0.9rem + 0.2vw);
-    --font-size-m: calc(0.9rem + 0.5vw);
-    --font-size-l: calc(1.5rem + 0.5vw);
-    --font-size-xl: calc(1.7rem + 0.5vw);
-    --font-size-xxl: calc(2.5rem + 0.5vw);
-    --font-size-xxxl: calc(3rem + 0.5vw);
+    --font-size-xs: 13px;
+    --font-size-s: 15px;
+    --font-size-m: 16px;
+    --font-size-l: 20px;
+    --font-size-xl: 30px;
+    --font-size-xxl: 65px;
+    --font-size-xxxl: 80px;
 
     --color-card: #ec407a;
     --light-grey: #cdcdcd;
@@ -66,17 +66,20 @@ ul {
 }
 
 h1 {
-    font-size: var(--font-size-xxl);
+    font-size: var(--font-size-xxxl);
 }
 
 h2 {
-    font-size: var(--font-size-xl);
+    font-size: var(--font-size-xxl);
 }
 
 h3 {
-    font-size: var(--font-size-l);
+    font-size: var(--font-size-xl);
 }
 
+h4{
+    font-size: var(--font-size-l);
+}
 /**************************************/
 /*************** HEADER ***************/
 /**************************************/
