Aggiunta side pop up

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -15,7 +15,7 @@ $bg-comical-coral: #f3d0c7;
 $bg-adorable: #e1c0b0;
 $bg-strawberry-pop:#ef2853;
 $bg-strawberry-pop-2: #ee2852;
-$bg-transparent: #00000026;
+$bg-shadow: #00000026;
 
 // Text colors
 $txt-peach-sachet: #f5d8ca;
